--- a/.travis.yml
+++ b/.travis.yml
@@ -69,7 +69,7 @@ jobs:
         - ls -lrt dist
         - cp dist/main_flask main-linux
       script:
-        - docker build -t estuaryoss/discovery-centos:latest -f Dockerfiles/Dockerfile_centos .
+        - docker build -t estuaryoss/discovery-centos:latest -f Dockerfile_centos .
         - docker run
           -d
           -p 8080:8080
@@ -89,8 +89,10 @@ jobs:
         ISOLATED: true
         SCRIPTS_DIR: tests
       before_script:
+        - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker-compose pull
         - docker build -t estuaryoss/discovery:latest -f Dockerfile .
+        - docker tag estuaryoss/discovery:latest dinutac/estuary-discovery:latest # <-- remove this when migrating
         - docker-compose up -d
         - docker pull alpine:3.9.4
       script:
@@ -123,8 +125,10 @@ jobs:
         ISOLATED: true
         SCRIPTS_DIR: tests
       before_script:
+        - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker-compose -f tests/fluentd_efk/docker-compose.yml pull
         - docker build -t estuaryoss/discovery:latest -f Dockerfile .
+        - docker tag estuaryoss/discovery:latest dinutac/estuary-discovery:latest # <-- remove this when migrating
         #        - sudo sysctl -w vm.max_map_count=262144
         - docker-compose -f tests/fluentd_efk/docker-compose.yml up --build -d
         - sleep 120 #wait until efk stack is up and running
