--- a/tests/fluentd_efk/docker-compose.yml
+++ b/tests/fluentd_efk/docker-compose.yml
@@ -1,10 +1,23 @@
 version: '2'
 services:
+  eureka:
+    container_name: netflix-eureka
+    image: dinutac/netflixoss-eureka:latest
+    expose:
+      - "8080"
+    ports:
+      - "8080:8080"
+    networks:
+      - elastic
+
   estuary-discovery:
     container_name: estuary-discovery
     image: dinutac/estuary-discovery:latest
+    command: bash -c "sleep 60 && /scripts/main_flask.py"
     environment:
       FLUENTD_IP_PORT: fluentd:24224
+      EUREKA_SERVER: http://eureka:8080/eureka/v2
+      APP_IP_PORT: 192.168.0.222:8081
     expose:
       - "8080"
     ports:
@@ -15,8 +28,11 @@ services:
   estuary-agent:
     container_name: estuary-agent
     image: dinutac/estuary-agent:latest
+    command: bash -c "sleep 60 && /scripts/main_flask.py"
     environment:
       FLUENTD_IP_PORT: fluentd:24224
+      EUREKA_SERVER: http://eureka:8080/eureka/v2
+      APP_IP_PORT: 192.168.0.222:8082
     expose:
       - "8080"
     ports:
@@ -27,12 +43,17 @@ services:
   estuary-agent-java:
     container_name: estuary-agent-java
     image: dinutac/estuary-agent-java:latest
+    entrypoint: bash -c "sleep 60 && java -jar /app/agent-4.0.9-SNAPSHOT-exec.jar --eureka.client.enabled=true"
     environment:
       FLUENTD_IP_PORT: fluentd:24224
+      EUREKA_SERVER: http://eureka:8080/eureka/v2
+      APP_IP: 192.168.0.222
+      PORT: 8083
+      HTTP_AUTH_TOKEN: None
     expose:
       - "8080"
     ports:
-      - "8083:8080"
+      - "8083:8083"
     networks:
       - elastic
 
@@ -109,16 +130,16 @@ services:
 #    networks:
 #      - elastic
       
-#  kib01:
-#    image: docker.elastic.co/kibana/kibana:7.8.0
-#    container_name: kib01
-#    ports:
-#      - 5601:5601
-#    environment:
-#      ELASTICSEARCH_URL: http://es01:9200
-#      ELASTICSEARCH_HOSTS: http://es01:9200
-#    networks:
-#      - elastic
+  kib01:
+    image: docker.elastic.co/kibana/kibana:7.8.0
+    container_name: kib01
+    ports:
+      - 5601:5601
+    environment:
+      ELASTICSEARCH_URL: http://es01:9200
+      ELASTICSEARCH_HOSTS: http://es01:9200
+    networks:
+      - elastic
 
 volumes:
   data01:
