--- a/tests/fluentd_efk/docker-compose.yml
+++ b/tests/fluentd_efk/docker-compose.yml
@@ -12,65 +12,93 @@ services:
 
   estuary-discovery:
     container_name: estuary-discovery
-    image: dinutac/estuary-discovery:latest
+    hostname: estuary-discovery
+    image: dinutac/estuary-discovery:4.2.0
     command: bash -c "sleep 60 && /scripts/main_flask.py"
     environment:
       FLUENTD_IP_PORT: fluentd:24224
       EUREKA_SERVER: http://eureka:8080/eureka/v2
-      APP_IP_PORT: 192.168.0.222:8081
-    expose:
-      - "8080"
+      APP_IP_PORT: 192.168.0.11:8081
     ports:
       - "8081:8080"
     networks:
       - elastic
 
-  estuary-agent:
-    container_name: estuary-agent
-    image: dinutac/estuary-agent:latest
-    command: bash -c "sleep 60 && /scripts/main_flask.py"
-    environment:
-      FLUENTD_IP_PORT: fluentd:24224
-      EUREKA_SERVER: http://eureka:8080/eureka/v2
-      APP_IP_PORT: 192.168.0.222:8082
-    expose:
-      - "8080"
-    ports:
-      - "8082:8080"
-    networks:
-      - elastic
+  #  estuary-agent:
+  #    container_name: estuary-agent
+  #    hostname: estuary-agent
+  #    image: dinutac/estuary-agent:latest
+  #    command: bash -c "sleep 60 && /scripts/main_flask.py"
+  #    environment:
+  #      FLUENTD_IP_PORT: fluentd:24224
+  #      EUREKA_SERVER: http://eureka:8080/eureka/v2
+  #      APP_IP_PORT: 192.168.0.11:8082
+  #    expose:
+  #      - "8080"
+  #    ports:
+  #      - "8082:8080"
+  #    networks:
+  #      - elastic
 
   estuary-agent-java:
     container_name: estuary-agent-java
+    hostname: estuary-agent-java
     image: dinutac/estuary-agent-java:latest
     entrypoint: bash -c "sleep 60 && java -jar /app/agent-exec.jar --eureka.client.enabled=true"
     environment:
+      spring_profiles_active: test
       FLUENTD_IP_PORT: fluentd:24224
       EUREKA_SERVER: http://eureka:8080/eureka/v2
-      APP_IP: 192.168.0.222
-      PORT: 8083
+      APP_IP: 192.168.0.11
+      PORT: 8083 # <--
       HTTP_AUTH_TOKEN: None
-    expose:
-      - "8080"
     ports:
       - "8083:8083"
     networks:
       - elastic
 
-#  web:
-#    image: httpd
-#    ports:
-#      - "80:80"
-#    links:
-#      - fluentd
-#    logging:
-#      driver: "fluentd"
-#      options:
+  estuary-agent-go:
+    container_name: estuary-agent-go
+    hostname: estuary-agent-go
+    image: dinutac/estuary-agent-go:latest
+    entrypoint: bash -c "sleep 60 && go run Main.go"
+    environment:
+      FLUENTD_IP_PORT: fluentd:24224
+      EUREKA_SERVER: http://eureka:8080/eureka/v2
+      APP_IP_PORT: 192.168.0.11:8084
+      PORT: 8084
+      HTTP_AUTH_TOKEN: "None"
+    ports:
+      - "8084:8084"
+    networks:
+      - elastic
+
+      #  estuary-viewer:
+      #    image: dinutac/estuary-viewer:latest
+      #    hostname: estuary-viewer
+      #    entrypoint: bash -c "echo VUE_APP_ESTUARY_DISCOVERY=http://192.168.0.11:8081 > /home/node/app/.env; echo VUE_APP_HTTP_AUTH_TOKEN=None >> /home/node/app/.env; /home/node/app/start.sh"
+      #    container_name: estuary-viewer
+      #    ports:
+      #      - "8090:8080"
+      #    expose:
+      #      - "8080"
+      #    networks:
+      #      - elastic
+
+      #  web:
+      #    image: httpd
+      #    ports:
+      #      - "80:80"
+      #    links:
+      #      - fluentd
+      #    logging:
+      #      driver: "fluentd"
+      #      options:
 #        fluentd-address: localhost:24224
 #        tag: httpd.access
 #    networks:
 #      - elastic
-      
+
   fluentd:
     build: ./fluentd
     volumes:
