--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     container_name: estuary-discovery
     image: estuaryoss/discovery:latest
     hostname: estuary-discovery
-    command: bash -c "sleep 30 && /scripts/main_flask.py"
+    command: bash -c "sleep 30 && /root/app/main-linux"
     environment:
       #      FLUENTD_IP_PORT: 192.168.100.12:24224
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
@@ -16,21 +16,10 @@ services:
     expose:
       - "8080"
 
-  estuary-agent:
-    image: estuaryoss/agent:latest
-    hostname: estuary-agent
-    command: bash -c "sleep 30 && /scripts/main_flask.py"
-    environment:
-      limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
-      EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
-      APP_IP_PORT: estuary-agent:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
-    expose:
-      - "8080"
-
   estuary-agent2:
-    image: estuaryoss/agent:latest
+    image: estuaryoss/agent-go:latest
     hostname: estuary-agent2
-    command: bash -c "sleep 30 && /scripts/main_flask.py"
+    command: bash -c "sleep 30 && go run Main.go"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
