--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,8 +10,8 @@ services:
       #      FLUENTD_IP_PORT: 192.168.100.12:24224
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
       APP_IP_PORT: estuary-discovery:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
-    #    ports:
-    #      - "8090:8080"
+    ports:
+      - "8081:8080"
 
     expose:
       - "8080"
@@ -45,7 +45,7 @@ services:
   eureka-server:
     image: estuaryoss/netflix-eureka:1.10.5
     hostname: eureka-server
-    #    ports:
-    #      - "8080:8080"
+    ports:
+      - "8080:8080"
     expose:
       - "8080"
