modified start cmd for agent go

--- a/Dockerfile_alpine
+++ b/Dockerfile_alpine
@@ -1,5 +1,5 @@
 ###########################################
-## alpine image not maintained anymore. obsolete ######
+####### only for testing purposes ######
 ###########################################
 
 FROM alpine:3.11.6
