--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,7 +19,7 @@ services:
   estuary-agent2:
     image: estuaryoss/agent-go:latest
     hostname: estuary-agent2
-    command: bash -c "sleep 30 && go run Main.go"
+    command: bash -c "sleep 30 && ./estuary-agent-go"
     environment:
       limit: 'sky' #example env var inserted. you can read it with environ('limit') in your jinja2 template
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
