fix getting deployments

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -17,10 +17,10 @@ jobs:
           command: pip install pypiwin32
           name: "install pypiwin32"
       - run:
-          command: pyinstaller --onefile --clean main_flask.py
+          command: pyinstaller --onefile --clean main.py
           name: "build main-win"
       - run:
-          command: Copy-Item "dist\main_flask.exe" -Destination "main-win.exe"
+          command: Copy-Item "dist\main.exe" -Destination "main-win.exe"
           name: "copy main-win"
       - run:
           command: Start-Process .\main-win.exe
