--- a/.travis.yml
+++ b/.travis.yml
@@ -39,7 +39,7 @@ jobs:
       before_install:
         - pip3 install -r requirements.txt
       before_script:
-        - pyinstaller --onefile main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/templates/**:rest/api/templates/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - chmod +x main-linux
@@ -47,7 +47,7 @@ jobs:
         - ./main-linux &
         #        - ./main-linux > /dev/null 2>&1 &
         - ls -lrt
-        - sleep 5
+        - sleep 10
         #          - ./ngrok.sh
         #          - sleep 3600
         - ls -lrt /tmp
@@ -66,7 +66,7 @@ jobs:
         SKIP_ON_CENTOS: true
       before_script:
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile --clean main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/templates/**:rest/api/templates/" main.py
         - ls -lrt dist
       script:
         - docker build -t estuaryoss/discovery:latest -f Dockerfile .
@@ -75,7 +75,7 @@ jobs:
           -p 8080:8080
           --name estuary-discovery
           estuaryoss/discovery:latest
-        - sleep 5
+        - sleep 10
         - docker logs estuary-discovery
         #  - ./ngrok.sh
         #  - sleep 3600
@@ -91,7 +91,7 @@ jobs:
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker-compose pull
-        - pyinstaller --onefile --clean main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/templates/**:rest/api/templates/" main.py
         - docker build -t estuaryoss/discovery:latest -f Dockerfile .
         - docker-compose up -d
         - docker pull alpine:3.9.4
@@ -150,7 +150,7 @@ jobs:
       services: docker
       before_deploy:
         - pip3 install -r requirements.txt
-        - pyinstaller --onefile main.py
+        - pyinstaller --onefile --clean --add-data="rest/api/templates/**:rest/api/templates/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
         - ls -lrt
