--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -11,19 +11,19 @@ jobs:
     steps:
       - checkout
       - run:
-          command: pip install -r requirements.txt
+          command: pip3 install -r requirements.txt
           name: "install requirements"
       - run:
-          command: pip install pypiwin32
+          command: pip3 install pypiwin32
           name: "install pypiwin32"
       - run:
-          command: python -m PyInstaller --onefile --clean --add-data="rest/api/templates/;rest/api/templates/" main.py
+          command: python3 -m PyInstaller --onefile --clean --add-data="rest/api/templates/;rest/api/templates/" main.py
           name: "build main-win"
       - run:
           command: Copy-Item "dist\main.exe" -Destination "main-win.exe"
           name: "copy main-win"
       - run:
-          command: .\main-win.exe
+          command: Start-Process .\main-win.exe
           name: "start main-win"
           environment:
             PORT: 8080
@@ -33,7 +33,7 @@ jobs:
           command: ping -n 10 127.0.0.1
           name: "wait some time"
       - run:
-          command: python -m unittest discover tests/rest "*_test.py"
+          command: python3 -m unittest discover tests/rest "*_test.py"
           name: "run integration tests"
           environment:
             ENABLE_HTTPS: false
