--- a/.travis.yml
+++ b/.travis.yml
@@ -1,6 +1,6 @@
 dist: xenial
 language: python
-python: 3.6
+python: 3.9
 script: skip
 os: linux
 
@@ -12,7 +12,7 @@ jobs:
     - stage: test
     #run unit tests for render
     - language: python
-      python: 3.6
+      python: 3.9
       env:
         TEMPLATES_DIR: inputs/templates
         VARS_DIR: inputs/variables
@@ -21,6 +21,7 @@ jobs:
       before_install:
         - pip3 install -r requirements.txt
         - pip3 install coveralls
+        - pip3 install --ignore-installed six
       before_script:
         - py.test tests/render_test.py --cov=rest/api/jinja2
       script:
@@ -30,7 +31,7 @@ jobs:
 
       #run self contained flask app
     - language: python
-      python: 3.6
+      python: 3.9
       env:
         TEMPLATES_DIR: inputs/templates
         VARS_DIR: inputs/variables
@@ -38,6 +39,7 @@ jobs:
         ISOLATED: true
       before_install:
         - pip3 install -r requirements.txt
+        - pip3 install --ignore-installed six
       before_script:
         - python3 -m PyInstaller --onefile --clean --add-data="rest/api/templates/:rest/api/templates/" main.py
         - ls -lrt dist
@@ -66,6 +68,7 @@ jobs:
         SKIP_ON_CENTOS: true
       before_script:
         - pip3 install -r requirements.txt
+        - pip3 install --ignore-installed six
         - python3 -m PyInstaller --onefile --clean --add-data="rest/api/templates/:rest/api/templates/" main.py
         - ls -lrt dist
       script:
@@ -83,7 +86,7 @@ jobs:
 
     #run eureka registration tests
     - language: python
-      python: 3.6
+      python: 3.9
       services: docker
       env:
         ISOLATED: true
@@ -91,6 +94,8 @@ jobs:
       before_script:
         - docker login -u "$DOCKERHUB_USERNAME" -p "$DOCKERHUB_TOKEN"
         - docker-compose pull
+        - pip3 install -r requirements.txt
+        - pip3 install --ignore-installed six
         - python3 -m PyInstaller --onefile --clean --add-data="rest/api/templates/:rest/api/templates/" main.py
         - docker build -t estuaryoss/discovery:latest -f Dockerfile .
         - docker-compose up -d
@@ -116,7 +121,7 @@ jobs:
 
     #run fluentd EFK tests
     #    - language: python
-    #      python: 3.6
+    #      python: 3.9
     #      services: docker
     #      env:
     #        ISOLATED: true
@@ -143,6 +148,7 @@ jobs:
       services: docker
       before_deploy:
         - pip3 install -r requirements.txt
+        - pip3 install --ignore-installed six
         - python3 -m PyInstaller --onefile --clean --add-data="rest/api/templates/:rest/api/templates/" main.py
         - ls -lrt dist
         - cp dist/main main-linux
