--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -1,7 +1,7 @@
 version: 2.1
 
 orbs:
-  win: circleci/windows@2.2.0
+  win: circleci/windows@2.4.1
 
 jobs:
   build-and-test:
@@ -11,13 +11,22 @@ jobs:
     steps:
       - checkout
       - run:
+          command: pip --version
+          name: "pip version"
+      - run:
           command: pip install -r requirements.txt
           name: "install requirements"
       - run:
           command: pip install pypiwin32
           name: "install pypiwin32"
       - run:
-          command: pyinstaller --onefile --clean --add-data "rest\api\templates\;rest\api\templates\" main.py
+          command: pip install --ignore-installed six
+          name: "install six"
+      - run:
+          command: python --version
+          name: "python version"
+      - run:
+          command: python -m PyInstaller --onefile --clean --add-data="rest/api/templates/;rest/api/templates/" main.py
           name: "build main-win"
       - run:
           command: Copy-Item "dist\main.exe" -Destination "main-win.exe"
