--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,7 +9,8 @@ services:
     environment:
       #      FLUENTD_IP_PORT: 192.168.100.12:24224
       EUREKA_SERVER: http://eureka-server:8080/eureka/v2 #your eureka server
-      APP_IP_PORT: estuary-discovery:8080 #your app details: where it is and on which port. needed for service discovery and spread of tests from the test client
+      APP_IP: estuary-discovery #your app details: the IP/hostname. needed for service discovery and spread of tests from the test client
+      PORT: 8080 #your app details:  port. needed for service discovery and spread of tests from the test client
       HTTP_AUTH_USER: "admin"
       HTTP_AUTH_PASSWORD: "estuaryoss123!"
     ports:
