aggregation takes care of response that aren't json, and transposes all responses in a zip

--- a/Dockerfile_alpine
+++ b/Dockerfile_alpine
@@ -1,6 +1,6 @@
-###########################################
-####### only for testing purposes ######
-###########################################
+####################################################
+####### only for testing purposes. do not use ######
+####################################################
 
 FROM alpine:3.11.6
 
